# RCTGen

./: .gitignore  CMakeLists.txt  CMakePresets.json  cmake.toml  merge_parkobj.py  openrct2.ride.single_rail_coaster.parkobj  readme.md  split_atlas.py  vcpkg.json
RCT2RideGen/: CMakeLists.txt
TrackRender/: CMakeLists.txt
examples/alpine/: materials.mtl  sprites_out.json  track.json
examples/hybrid/: materials.mtl  sprites_out.json  track.json
examples/single_rail/: materials.mtl  single_rail.json  sprites_out.json  track.json
libIsoRender/: CMakeLists.txt
libIsoRender/src/: pack.cpp
object/: object.json
scripts/: csg_extract.py  rct_palette.py
src/iso-render/: CMakeLists.txt  Color.hpp  Image.cpp  Image.hpp  Main.cpp.body  Mesh.cpp  Mesh.hpp  Pack.cpp  Palette.cpp  Palette.hpp  RayTrace.cpp  RayTrace.hpp  Renderer.cpp  Renderer.hpp  VectorMath.cpp  VectorMath.hpp  color.h  image.cpp  image.h  main.cpp  model.cpp  model.h  pack.cpp  palette.cpp  palette.h  raytrace.cpp  raytrace.h  renderer.cpp  renderer.h  vectormath.cpp  vectormath.h
src/rct2-ride-gen/: CMakeLists.txt  Constants.hpp  Json.cpp  Json.hpp  Logging.cpp  Logging.hpp  Model.hpp  Project.hpp  ProjectExporter.cpp  ProjectExporter.hpp  ProjectLoader.cpp  ProjectLoader.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  Vehicle.hpp  main.cpp  project.cpp  project.h  transform.h
src/track-render/: CMakeLists.txt  Constants.hpp  Json.cpp  Json.hpp  Logging.cpp  Mask.cpp  Mask.hpp  Sprites.cpp  Sprites.hpp  Subposition.cpp  Track.cpp  Track.hpp  TrackSections.cpp  main.cpp  mask.cpp  mask.h  sprites.cpp  sprites.h  subposition.cpp  track.cpp  track.h  track_sections.cpp
src/util/: CMakeLists.txt  Json.cpp  Json.hpp  Logging.cpp  Logging.hpp
tests/regression/: CMakeLists.txt  run_all.sh  run_makevehicle.sh  run_one.cmake  run_subposition.sh  run_tracks.sh
tests/regression/golden/subposition/: output.txt
tests/unit/: CMakeLists.txt  test_json.cpp  test_logging.cpp
tests/unit/iso-render/: Image.t.cpp  Palette.t.cpp  VectorMath.t.cpp
tests/unit/rct2-ride-gen/: Constants.t.cpp  ProjectLoader.t.cpp  SpriteRenderer.t.cpp
tests/unit/track-render/: Constants.t.cpp  TrackSections.t.cpp
tests/unit/util/: Json.t.cpp  Logging.t.cpp
